# xml-conduit-decode

./: .gitignore  README.md  xml-conduit-decode.cabal
src/Text/XML/: Decode.hs
src/Text/XML/Decode/: DecodeCursor.hs  HCursor.hs  Instances.hs  Parsers.hs  Time.hs
tests/: Main.hs
tests/xml/: bad.xml  bad_choice.xml  bad_decode_inside_choice.xml  ok.xml
