name:                xml-conduit-decode
version:             0.1.0.0
synopsis:            Support for historical cursors & decoding on top of xml-conduit. Created in the sprit of scalaz-xml.
-- description:
homepage:            https://github.com/benkolera/xml-conduit-decode
license:             MIT
license-file:        LICENSE
author:              Ben Kolera
maintainer:          ben.kolera@gmail.com
category:            XML
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Text.XML.Decode
                     , Text.XML.Decode.HCursor
                     , Text.XML.Decode.Time
                     , Text.XML.Decode.DecodeCursor
                     , Text.XML.Decode.Parsers
                     , Text.XML.Decode.Instances
  build-depends:       base                      >= 4.4     && < 5
                     , base-prelude
                     , bifunctors                >= 4.1     && < 5
                     , lens                      >= 4.1     && < 5
                     , old-locale                >= 1       && < 2
                     , semigroups                >= 0.13    && < 1
                     , text                      >= 0.11    && < 1.2
                     , time                      >= 1.4     && < 2
                     , xml-conduit               >= 1.2     && < 2
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite test
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  hs-source-dirs:      tests
  main-is:             Main.hs
  build-depends:       base
                     , base-prelude
                     , data-default
                     , lens
                     , system-filepath
                     , text
                     , tasty
                     , tasty-hunit
                     , time
                     , xml-conduit
                     , xml-conduit-decode
                     , xml-types